tests/baselines/reference/assignToModule.errors.txt
==== tests/cases/compiler/assignToModule.ts (1 errors) ====
    module A {}
    A = undefined; // invalid LHS
    ~
!!! assignToModule.ts(2,1): error TS2095: Could not find symbol 'A'.